<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Hint"
        android:id="@+id/txtHint"
        android:padding="10dp"
        android:background="#AE15FF"
        android:textColor="#ccc"
        android:textSize="16sp"/>

    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:id="@+id/imgView"
        android:layout_marginTop="10dp"
        android:layout_below="@id/txtHint"
        android:contentDescription="@string/image_to_classify"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:padding="10dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/classify"
                android:id="@+id/btnClassify"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose"
                android:layout_marginStart="10dp"
                android:id="@+id/btnChoose"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtClass"
            android:textSize="16sp"
            android:text="@string/no_image_found"
            android:textAlignment="center"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CopyRight"
            android:layout_marginTop="30dp"
            android:textAlignment="center"
            android:textColor="#666"/>
    </LinearLayout>


</RelativeLayout>